--- a/src/App.css
+++ b/src/App.css
@@ -530,3 +530,9 @@ main > div > span {
     width: 90%;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .explorer {
+    width: 50%;
+  }
+}
